Change I/O Threads to Virtual Threads